...
    "name": "Structurizr Demo",
    "description": "This is a demo workspace.",
    "model": {
      "people": [
        {
          "id": "user",
          "name": "User",
          "description": "A user of the system."
        }
      ],
      "softwareSystems": [
        {
          "id": "softwareSystem",
          "name": "Software System",
          "description": "This is a software system.",
          "containers": [
            {
              "id": "webApplication",
              "name": "Web Application",
              "description": "Provides all functionality to users via a web interface.",
...
              "name": "API Application",
              "description": "Provides API functionality to the web application.",
              "technology": "Dart, Shelf"
            },
            {
              "id": "database",
              "name": "Database",
              "description": "Stores user data and other system information.",
              "technology": "PostgreSQL"
            }
          ]
        }
      ],
...
